--- a/1.html
+++ b/1.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>WEB1-html</title>
+  <title>WEB1-HTML</title>
   <meta charset="utf-8">
 </head>
 <body>
@@ -21,3 +21,4 @@
    may be embedded into the rendered page.
    It provides a means to create structured documents by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes and other items. HTML elements are delineated by tags, written using angle brackets.</p>
 </body>
+</html>
