--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 <head>
   <title>WEB1-Welcome</title>
   <meta charset="utf-8">
+  <p>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131498546-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-131498546-1');
+    </script>
+  </p>
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
@@ -63,5 +74,6 @@ s0.parentNode.insertBefore(s1,s0);
 </script>
 <!--End of Tawk.to Script-->
 </p>
+
 </body>
 </html>
